// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correct resolve owner 1`] = `
Object {
  "Options": Object {
    "ID": "component",
    "text": [Function],
  },
  "html": "
<span><span>Text for content<!--0--></span>
<!--0-->
<!--0--></span>
<!--0-->
",
}
`;

exports[`should remove block in if 1`] = `
Object {
  "Options": Object {
    "ID": "component",
    "data": "foo",
    "visible": true,
  },
  "html": "
<div class=\\"content\\"> Text content for foo
  <!--0-->
</div>
<!--0-->
<!--0-->
",
}
`;

exports[`should work useblock if was update from block component 1`] = `
Object {
  "Options": Object {
    "ID": "component",
  },
  "html": "
<!--0-->
<!--0-->
",
}
`;

exports[`should work with {% block "default" %} 1`] = `
Object {
  "Options": Object {
    "ID": "component",
  },
  "html": "
<div>
  <a> Text for content
    <!--0-->
  </a>
</div>
",
}
`;

exports[`should work with component arguments 1`] = `
Object {
  "Options": Object {
    "ID": "component",
    "url": "http://foo.example.com",
  },
  "html": "
<div>
  <a href=\\"http://foo.example.com\\"> Text for
    <!--0-->http://foo.example.com
    <!--1-->
    <!--0-->
  </a>
</div>
",
}
`;

exports[`should work with component default block 1`] = `
Object {
  "Options": Object {
    "ID": "component",
    "url": "http://foo.example.com",
  },
  "html": "
<div>
  <a href=\\"http://foo.example.com\\"> Text for
    <!--0-->http://foo.example.com
    <!--0-->
  </a>
</div>
",
}
`;

exports[`should work with defblock nested in useblock 1`] = `
Object {
  "Options": Object {
    "ID": "component",
    "loaded": true,
    "red": true,
    "visible": true,
  },
  "html": "
 red &amp;&amp; loaded &amp; visible
 <!--0-->
 <!--0-->
 <!--0-->
 <!--0-->
 <!--0-->
 <!--0-->
 <!--0-->
 <!--0-->
 <!--0-->
",
}
`;

exports[`should work with for 1`] = `
Object {
  "Options": Object {
    "ID": "component",
    "links": Array [
      "http://baz.example.com",
      "http://bar.example.com",
      "http://foo.example.com",
    ],
  },
  "html": "
<ul>
  <li>
    <a href=\\"http://baz.example.com\\">Text for
      <!--0-->http://baz.example.com
      <!--0-->
    </a>
  </li>
  <li>
    <a href=\\"http://bar.example.com\\">Text for
      <!--0-->http://bar.example.com
      <!--0-->
    </a>
  </li>
  <li>
    <a href=\\"http://foo.example.com\\">Text for
      <!--0-->http://foo.example.com
      <!--0-->
    </a>
  </li>
</ul>
<a href=\\"http://example.com\\">Home
  <!--0-->
</a>
<!--0-->
",
}
`;

exports[`should work with two named blocks 1`] = `
Object {
  "Options": Object {
    "ID": "component",
  },
  "html": "
<div>
  <div>
    <div class=\\"title\\"> Text for title
      <!--0-->
    </div>
    <div class=\\"content\\"> Text for content
      <!--1-->
    </div>
  </div>
</div>
",
}
`;

exports[`should work with two nested if 1`] = `
Object {
  "Options": Object {
    "ID": "component",
    "big": true,
    "red": true,
  },
  "html": "
<button class=\\"big red\\">This button big=true, red=true big &amp;&amp; red
  <!--0-->
</button>
<!--0-->
<!--0-->
<!--0-->
",
}
`;
